src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Agentur_A__c</fullName>
        <label>Agentur (A)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Agentur_Cash__c</fullName>
        <label>Agentur-Cash</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Agentur_Natural__c</fullName>
        <label>Agentur-Natural</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Agentur_P__c</fullName>
        <label>Agentur (P)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Agentur_V__c</fullName>
        <label>Agentur (V)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BR__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BR (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Kunde_A__c</fullName>
        <label>Kunde (A)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Kunde_Cash__c</fullName>
        <label>Kunde-Cash</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Kunde_Natural__c</fullName>
        <label>Kunde Natural</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Kunde_P__c</fullName>
        <label>Kunde (P)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Kunde_V__c</fullName>
        <label>Kunde (V)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lic_Branche__c</fullName>
        <label>Branche</label>
        <picklist>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Games &amp; Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stationary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toys &amp; Games</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lic_CashFlow1__c</fullName>
        <label>Cash Flow 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lic_CashFlow2__c</fullName>
        <label>Cash Flow 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lic_CashFlow3__c</fullName>
        <label>Cash Flow 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lic_GarantiesummeRoyalty__c</fullName>
        <label>Garantiesumme / Royalty</label>
        <picklist>
            <picklistValues>
                <fullName>GS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lic_Gebiet__c</fullName>
        <label>Gebiet</label>
        <picklist>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lic_Leistung__c</fullName>
        <label>Leistung</label>
        <picklist>
            <picklistValues>
                <fullName>Produkt-Lizenz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion-Lizenz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media-Lizenz</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lic_Lizenzart__c</fullName>
        <label>Lizenzart</label>
        <picklist>
            <picklistValues>
                <fullName>intern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>extern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lic_Lizenzmarke__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lizenzmarke</label>
        <referenceTo>Lic_Lizenzmarke__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lic_Lizenzmarke_old__c</fullName>
        <label>Lizenzmarke</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lic_Lizenzumsatz__c</fullName>
        <formula>SomTv_MN3__c * Lic_SharePSL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lizenzumsatz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lic_RechnungsmonatLicensing__c</fullName>
        <label>Rechnungsmonat (Licensing)</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Okt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dez</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lic_SharePSL__c</fullName>
        <formula>Lic_Lizenzmarke__r.Lic_SharePSL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share PSL %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lic_SharePSL_old__c</fullName>
        <label>Share PSL %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lic_Vertragsnummer7Contracts__c</fullName>
        <label>Vertragsnummer (7Contracts)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Position__c</fullName>
        <formula>if( (PricebookEntry.Product2.Name = &quot;invalid_invalid_invalid&quot;) || (PricebookEntry.Product2.Name = &quot;Other Products&quot;),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOmTv_CloserSek__c</fullName>
        <label>Closer Sek</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTV_MN1__c</fullName>
        <formula>SomTv_MB1Bezahlt__c - SomTv_MB1Bezahlt__c * BR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_AE_inProzent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Agenturprovision in %</description>
        <inlineHelpText>Agenturprovision in %</inlineHelpText>
        <label>AE (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_AbzurechnendeLaenge__c</fullName>
        <inlineHelpText>Kundenanteil</inlineHelpText>
        <label>Abzurechnende Länge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_AdFProductHelper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NICHT IM LAYOUT
Feld wird für Visualforce Seite verwendet, um nach Produkten suchen zu können.
VISUALFORCE HELPER FIELD</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Product (Product)</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_AnteilAmGesamtinvest__c</fullName>
        <label>%-Anteil am Gesamtinvest</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_AuftragsnummerProdia__c</fullName>
        <label>Auftragsnummer Prodia</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_AuftragsnummerProsa__c</fullName>
        <label>Auftragsnummer Prosa</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Ausstrahlung__c</fullName>
        <label>Ausstrahlung</label>
        <picklist>
            <picklistValues>
                <fullName>EA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA/WH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA/RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH/RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA/WH/RR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_BausteinNo__c</fullName>
        <label>Baustein No</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Baustein__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Baustein</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity-Produkt</relationshipLabel>
        <relationshipName>Opportunity_Produkt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_Buchungssystem__c</fullName>
        <label>Buchungssystem</label>
        <picklist>
            <picklistValues>
                <fullName>ProSa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProDia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merlis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Buchungszeitraum_bisF__c</fullName>
        <description>Zeigt den Buchungszeitraum aus der Opportunity an.</description>
        <formula>Opportunity.SomTv_BuchungszeitraumBis__c</formula>
        <inlineHelpText>Zeigt den Buchungszeitraum aus der Opportunity an.</inlineHelpText>
        <label>Buchungszeitraum bis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_Buchungszeitraum_vonF__c</fullName>
        <description>Zeigt den Buchungszeitraum aus der Opportunity an.</description>
        <formula>Opportunity.SomTv_BuchungszeitraumVon__c</formula>
        <inlineHelpText>Zeigt den Buchungszeitraum aus der Opportunity an.</inlineHelpText>
        <label>Buchungszeitraum von</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_CloserAnzahl__c</fullName>
        <label>Closer Anzahl</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_ContentMarketing__c</fullName>
        <inlineHelpText>Bei Produkten die zu CM gehören sollen, bitte Ja auswählen.</inlineHelpText>
        <label>Content Marketing</label>
        <picklist>
            <picklistValues>
                <fullName>Ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nein</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Detail_Informationen__c</fullName>
        <inlineHelpText>Info zu Trailerlängen, Kundentanteil etc.</inlineHelpText>
        <label>Detail-Informationen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Differenz_zur_Vorwoche_MB1__c</fullName>
        <description>Mediabrutto1-Veränderung zur Vorwoche</description>
        <formula>SomTv_MB1__c - SomTv_MB1_Vorwoche__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mediabrutto1-Veränderung zur Vorwoche</inlineHelpText>
        <label>Differenz zur Vorwoche MB1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Differenz_zur_Vorwoche_MN3__c</fullName>
        <description>Medianetto3-Veränderung zur Vorwoche</description>
        <formula>SomTv_MN3__c - SomTv_MN3Vorwoche__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Medianetto3-Veränderung zur Vorwoche</inlineHelpText>
        <label>Differenz zur Vorwoche MN3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_DispoPreisprozent__c</fullName>
        <label>Dispo-Preisprozent</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_FakturaInfofeld__c</fullName>
        <label>Faktura Infofeld</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Faktura__c</fullName>
        <label>Faktura</label>
        <picklist>
            <picklistValues>
                <fullName>automatisch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>manuell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Folgen__c</fullName>
        <label>Folgen</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_FormatInfofeld__c</fullName>
        <label>Format Infofeld</label>
        <picklist>
            <picklistValues>
                <fullName>Prio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_FormatNew__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Format</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No valid Format found.</errorMessage>
            <filterItems>
                <field>P7S1_Format__c.P7S1_IstGueltig__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Actual valid formats.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>P7S1_Format__c</referenceTo>
        <relationshipLabel>Opportunity-Produkt</relationshipLabel>
        <relationshipName>Opportunity_Produkt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_Fremdbezug__c</fullName>
        <description>nur in Ausnahmen wird mit FREMDBEZUG gebucht - Rg.-Stellung der TV-Media (Cash-extern) erfolgt im Falle &quot;FREMDBEZUG&quot; über SOM Digital (keine Rechnungsstellung in ProSedi)</description>
        <inlineHelpText>nur in Ausnahmen wird mit FREMDBEZUG gebucht - Rg.-Stellung der TV-Media (Cash-extern) erfolgt im Falle &quot;FREMDBEZUG&quot; über SOM Digital (keine Rechnungsstellung in ProSedi)</inlineHelpText>
        <label>Fremdbezug</label>
        <picklist>
            <picklistValues>
                <fullName>ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nein</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_GaPaketExtra__c</fullName>
        <description>GA bei Diverse
1194 Program Sponsoring, Spots, Spec Ads (Spotkontingent P7S1)
1184 Wunschplatzierung Spotkontingent P7S1
1117 Free Holding (Eigenwerbung P7S1)
GA bei Paket Extra
1121 Spec Ads 12Min
1122 Spec Ads non 12Min
1115 Standard Spot 12Min</description>
        <inlineHelpText>GA bei Diverse
1194 Program Sponsoring, Spots, Spec Ads (Spotkontingent P7S1)
1184 Wunschplatzierung Spotkontingent P7S1
1117 Free Holding (Eigenwerbung P7S1)
GA bei Paket Extra
1121 Spec Ads 12Min
1122 Spec Ads non 12Min
1115 Standard Spot 12Min</inlineHelpText>
        <label>GA Paket Extra / Diverse</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_GaSonder__c</fullName>
        <description>Sonderfall für abweichende Geschäftsart</description>
        <inlineHelpText>Sonderfall für abweichende Geschäftsart</inlineHelpText>
        <label>GA Sonderfall</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Genre__c</fullName>
        <label>Genre</label>
        <picklist>
            <picklistValues>
                <fullName>Unterhaltung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spielfilm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wetter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_GeschaeftsartUnbezahlt__c</fullName>
        <description>Geschäftsarten unbezahlt</description>
        <inlineHelpText>Geschäftsarten unbezahlt</inlineHelpText>
        <label>Geschäftsart unbezahlt</label>
        <picklist>
            <controllingField>SomTv_NrGoodwill__c</controllingField>
            <picklistValues>
                <fullName>1190	 Freispot / NR Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1152	 Freispot / NR bilateral 12Min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1157	 Freispot / NR bilateral Non12Min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1151 Freispot / LA bilaterale Verträge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1154	 Freispot / NR Sonder bilateral 12Min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1158	 Freispot / NR Sonder bilateral Non12Min / SoWeFo (AUT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1172	 Freispot / NR-LA Marketingangebot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1188	 AL Werbungtreibender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1150 Freispot / NR Neukunde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1156 Freispot / NR Bündelung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1174	 Freispot / NR Sonder Pool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1181 Freispot / LA Pool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1187	 AL Agentur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1163 Freispot / NR Pakete Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1164	 Freispot / NR Pakete 12Min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1169	 Freispot / NR Pakete Sales Non12Min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1129 NR-Package SoWeFo (GER) / Sonderwerbeformen (manuell) AT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1168	 Freispot / Goodwill-Sales 12Min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1199 Freispot / Goodwill-Sales Non12Min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1159	 Freispot / Goodwill RW-Ausgleich / Programmperformance (Sales Operations)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1160	 Freispot / Goodwill Motivbuchungen/Sendetechnik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1165	 Freispot / Goodwill TKP-Ausgleich (SB/SC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1196	 Freispot / Goodwill Infomercials / Volumendeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1107 Gegengeschäft - kein Cash extern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1195 Barter-Agentur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1108 Reservierungen + Vorbereitung Package (kein Cash - Reservierung)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1131 Langfristreservierung (kein Cash - Reservierung)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1184 Wunschplatzierung Spotkontigent P7S1 - kein Cash extern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1194 Spotkontigent P7S1 - kein Cash extern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1117 Eigenwerbung P7S1 - kein Cash extern</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Geschaeftsart__c</fullName>
        <label>Geschäftsart</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Innerhalb_Commitment__c</fullName>
        <formula>Opportunity.SomTV_Innerhalb_Commitment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Innerhalb Commitment / Zubuchung</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_KonvergentFormel__c</fullName>
        <description>Zeigt bei konvergente Projekten &quot;ja&quot; falls in der zugehörigen Opportunity gesetzt.</description>
        <formula>TEXT(Opportunity.SomTv_Konvergent__c )</formula>
        <inlineHelpText>Zeigt bei konvergente Projekten &quot;ja&quot; falls in der zugehörigen Opportunity gesetzt.</inlineHelpText>
        <label>konvergent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Kundenprodukt__c</fullName>
        <label>Kundenprodukt</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_MB1Bezahlt__c</fullName>
        <description>MB1+Dispopreisprozent=Brutto Bezahlt (BB)</description>
        <formula>IF( ISBLANK(TEXT(SomTv_NrGoodwill__c)), SomTv_MB1__c * SomTv_DispoPreisprozent__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MB1+Dispopreisprozent=Brutto Bezahlt (BB)</inlineHelpText>
        <label>MB1 (bezahlt)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB1_1FS__c</fullName>
        <description>Mediabrutto 1-Volumen des ersten Factsheets. Dieser Wert wird manuell gepflegt und darf nicht verändert werden.</description>
        <inlineHelpText>Mediabrutto 1-Volumen des ersten Factsheets. Dieser Wert wird manuell gepflegt und darf nicht verändert werden.</inlineHelpText>
        <label>MB1 1. FS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_MB1_Kopf_AdF__c</fullName>
        <description>entspricht MB1 (bezahlt), MB1+Dispopreisprozent=Brutto Bezahlt (BB)</description>
        <inlineHelpText>entspricht MB1 (bezahlt), MB1+Dispopreisprozent=Brutto Bezahlt (BB)</inlineHelpText>
        <label>MB1 Kopf</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB1_Vorwoche__c</fullName>
        <label>MB1 Vorwoche</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB1__c</fullName>
        <description>Verkaufspreis=Bruttolistenpreis (BL)</description>
        <formula>IF( ISBLANK(TEXT(SomTv_NrGoodwill__c)),  UnitPrice , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Verkaufspreis=Bruttolistenpreis (BL)</inlineHelpText>
        <label>MB1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB3_Kopf__c</fullName>
        <description>MB1 Kopf + Sonder-BR% (abhängig von Auf- und Abschlägen auf einzelne Werbeformen</description>
        <inlineHelpText>MB1 Kopf + Sonder-BR% (abhängig von Auf- und Abschlägen auf einzelne Werbeformen</inlineHelpText>
        <label>MB3 Kopf</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB3__c</fullName>
        <label>MB3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN2__c</fullName>
        <formula>IF (ISBLANK (SomTv_AE_inProzent__c), SomTV_MN1__c ,  SomTV_MN1__c - SomTV_MN1__c * SomTv_AE_inProzent__c)</formula>
        <label>MN2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3Vorwoche__c</fullName>
        <label>MN3 Vorwoche</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3_1FS__c</fullName>
        <description>Medianetto3-Volumen des ersten Factsheets. Dieser Wert wird manuell gepflegt und darf nicht verändert werden.</description>
        <inlineHelpText>Medianetto3-Volumen des ersten Factsheets. Dieser Wert wird manuell gepflegt und darf nicht verändert werden.</inlineHelpText>
        <label>MN3 1. FS</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3__c</fullName>
        <description>SomTv_MB1Bezahlt__c*(1-BR__c)*(1-SomTv_AE_inProzent__c)*(1-Skonto__c)</description>
        <formula>SomTv_MB1Bezahlt__c*(1-BR__c)*(1-SomTv_AE_inProzent__c)*(1-SomTv_Skonto__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SomTv_MB1Bezahlt__c*(1-BR__c)*(1-SomTv_AE_inProzent__c)*(1-Skonto__c)</inlineHelpText>
        <label>MN3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_NR__c</fullName>
        <label>NR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Non12MinNew__c</fullName>
        <formula>PricebookEntry.Product2.SomTv_SpecialAdsNon12Min__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non 12 Min</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_Non12MinOld__c</fullName>
        <defaultValue>false</defaultValue>
        <description>kann gelöscht werden ab Mitte November 2014, 
siehe https://jira.sim-technik.de/browse/CRMSALES-1489</description>
        <label>Non 12 Min (alt)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_NrGoodwillInEUR__c</fullName>
        <label>NR/Goodwill/Diverse in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_NrGoodwill__c</fullName>
        <label>NR/Goodwill/Diverse</label>
        <picklist>
            <picklistValues>
                <fullName>NR ausserhalb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NR innerhalb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>diverse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_NrProzent__c</fullName>
        <label>NR (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_NumberOfTimesToClone__c</fullName>
        <description>This field is used only for cloning the line-item.</description>
        <inlineHelpText>This field is used only for cloning the line-item.</inlineHelpText>
        <label>Anzahl Oli Kopien</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_OliRabattierfaehig__c</fullName>
        <defaultValue>false</defaultValue>
        <label>rabattierfähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_OpenerAnzahl__c</fullName>
        <label>Opener Anzahl</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_OpenerSek__c</fullName>
        <label>Opener Sek</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Paket_Extra__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kennzeichen, ob eine Geschäftsart aus Paket Extra / Diverse zum Tragen kommt.</description>
        <inlineHelpText>Kennzeichen, ob eine Geschäftsart aus Paket Extra / Diverse zum Tragen kommt.</inlineHelpText>
        <label>Paket Extra / Diverse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_PreiseFixFlexibel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preise fix/flexibel</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>